--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
   <!-- iOS/Safari 主畫面設定 -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="default">
-  <meta name="apple-mobile-web-app-title" content="美力時尚診所數據月報">
+  <meta name="apple-mobile-web-app-title" content="美力時尚診所 - 數據月報">
   
   <!-- Android/Chrome 主畫面設定 -->
   <meta name="mobile-web-app-capable" content="yes">
-  <meta name="application-name" content="美力時尚診所數據月報">
+  <meta name="application-name" content="美力時尚診所 - 數據月報">
   <meta name="theme-color" content="#4CAF50">
 
   <!-- 圖示設定 -->
